--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </head>
 
 
-<link rel="stylesheet" href="file:///C:/Users/skitt/.vscode/google_translator/styles.css">
+<link rel="stylesheet" href="styles.css">
 
 <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-<script src="C://Users/skitt/.vscode/google_translator/google_translator_updated.py"></script>
+<script src="google_translator_updated.py"></script>
 
  
 <form id="translate_entry">
