--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Imperial+Script&family=Linefont:wght@4..1000&family=Xanh+Mono:ital@0;1&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="file:///C:/Users/skitt/.vscode/google_translator/styles.css">
+  <link rel="stylesheet" href="styles.css">
 
   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
 
@@ -21,7 +21,7 @@
 
 
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-<script src="C://Users/skitt/.vscode/google_translator/google_translator_updated.py"></script>
+<script src="google_translator_updated.py"></script>
 
  
 <form id="translate_entry">
