--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     
+
+
 <head>
 
   <meta charset="UTF-8">
@@ -18,36 +20,38 @@
   <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css">
 
 </head>
-
+<body style="background-color:palegreen"></body>
 
 <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-<script src="google_translator_updated.py"></script>
+
 
  
-<form id="translate_entry">
+<form id="translate_entry" class="form">
     <label for="translate_entry">Translate:</label></br>
-    <textarea id="translate_entry" rows="4" cols="40" placeholder="bozo you havent typed anything"></textarea></br></br>
-    <button class="button" type="button" id="translateButton">Press</button>
+    <textarea id="translate_text" rows="4" cols="40" class="textarea" placeholder="bozo you havent typed anything"></textarea></br></br>
 </form>
-<form id="iterations">
+<button class="button" type="button" id="translateButton">Press</button>
+<form id="iterations_entry">
   <label for="iterations">Number of iterations:</label></br>
   <textarea id="iterations" rows="1" cols="2" placeholder="100"></textarea></br>
 </form>
+
+<div id="output_text" class="output_text"></div>
 
 <script> 
     const button = document.getElementById("translateButton")
     button.onclick = async () => {  
       button.textContent = "Translating..." 
-      const inputText = document.getElementById("translate_entry").value;  
+      const inputText = document.getElementById("translate_text").value;  
       const inputIterations = document.getElementById("iterations").value;
-      const response = await fetch('/translate', {  
+      const response = await fetch("http://localhost:5000/translate", {  
         method: 'POST',  
         headers: {'Content-Type': 'application/json'},  
         body: JSON.stringify({text: inputText, iterations: inputIterations})  
       });  
       const data = await response.json();  
       button.textContent = "Done! :)"
-      document.getElementById("translate_entry").value = data.translated_text; 
+      document.getElementById("output_text").textContent = data.translated_text; 
       
     };  
 </script>    
